Fix squashed flex width thumbnails on search page.

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -6,7 +6,9 @@
 }
 
 img {
+  height: 180px;
   margin: 0 15px 0 0;
+  min-width: 320px;
 }
 
 .video {
